crates/compiler/src/tests/e2e/bad/0569_mutual_recursive_structs_via_generic_wrapper/main.gom
struct Wrap[T] {
    value: T,
}

struct A {
    next: Wrap[B],
}

struct B {
    next: Wrap[A],
}

fn main() -> unit {
    ()
}
